// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpenseList with expenses fixture 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="Number1One"
      id="1"
      key="1"
      note="noteNumber1"
    />
    <ExpenseListItem
      amount={200}
      createdAt={-259200000}
      description="Number2Two"
      id="2"
      key="2"
      note="noteNumber2"
    />
    <ExpenseListItem
      amount={150}
      createdAt={259200000}
      description="Number3Three"
      id="3"
      key="3"
      note="noteNumber3"
    />
  </div>
</div>
`;

exports[`render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message list-item"
    >
      <span>
        No expense
      </span>
    </div>
  </div>
</div>
`;
